# task-manager-fullstack

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SOLUTION.md  docker-compose.yml  pyproject.toml
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.css  App.jsx  App.tsx  index.css  main.tsx
frontend/src/components/login/: LeftPanel.tsx
frontend/src/components/ui/: avatar.tsx  button.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  popover.tsx  textarea.tsx  toast.tsx
frontend/src/features/auth/components/: LoginForm.tsx
frontend/src/features/auth/hooks/: useCurrentUserQuery.tsx  useGetUserTokenQuery.ts  useLogout.ts  useUserTokenMutation.ts  useUserTokenQuery.ts
frontend/src/features/auth/interfaces/: auth.ts
frontend/src/features/auth/services/: auth.ts
frontend/src/features/auth/utils/: token.ts
frontend/src/features/tasks/components/: createTaskModal.tsx  dashboardHeader.tsx  dashboardSidebar.tsx  deleteTaskDialog.tsx  editTaskSheet.tsx  statsCards.tsx  (+2 more)
frontend/src/pages/: LoginPage.tsx  StatusPage.tsx  TasksPage.tsx
frontend/src/router/: AppRouter.tsx
frontend/src/shared/: api.ts  data.ts
src/: __init__.py  config.py  db.py  dependencies.py  main.py  models.py  seed.py
src/core/: security.py
src/repositories/: task_repository.py  user_repository.py
src/routers/: auth.py  task.py  user.py
src/services/: task_services.py  user_services.py
tests/: __init__.py  conftest.py  test_auth.py  test_tasks.py  test_users.py
(+7 files in other folders)
